--- a/.github/workflows/conf-publish.yml
+++ b/.github/workflows/conf-publish.yml
@@ -54,8 +54,7 @@ jobs:
     - name: Freeze with Flask-Frozen
       run: |
         ./migrate.sh 
-        export FLASK_DEBUG=True; export FLASK_DEVELOPMENT=True
-        python main.py --path ./sitedata --build
+        gunicorn -b 0.0.0.0:10000 main:app
     - name: Update cname
       run: |
         touch build/CNAME
